<resources>
    <string name="app_name">A Green Planet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_vn">Đăng nhập</string>
    <string name="cancel_vn">Từ chối</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="favorites">Favorites</string>
    <string name="add_all_to_my_cart">Add all to my cart</string>
    <string name="check_out">Check out</string>
    <string name="total">Total:</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="my_cart">My cart</string>
    <string name="submit_order">Submit order</string>
    <string name="shipping_address">Shipping address</string>
    <string name="add_shipping_address">Add Shipping address</string>
    <string name="payment">Payment</string>
    <string name="delivery_method">Delivery method</string>
    <string name="your_order_will_be_delivered_soon_n_thank_you_for_choosing_our_app">Your order will be delivered soon.\n Thank you for choosing our app!</string>
    <string name="back_to_home">Back to home</string>
    <string name="track_your_orders">Track your orders</string>
    <string name="success">SUCCESS!</string>
    <string name="rating_review"><![CDATA[Rating & Review]]></string>
    <string name="write_a_review">Write a review</string>
    <string name="my_orders">My orders</string>
    <string name="payment_method">Payment method</string>
    <string name="settings">Settings</string>
    <string name="my_reviews">My reviews</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="personal">Personal</string>
    <string name="client_id">126739741040-52sh958eduivhj0hqvkjk90g5sutnlsj.apps.googleusercontent.com</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_name_require">You need to enter your name</string>
    <string name="enter_phone_number_require">You need to enter your phoneNumber</string>
    <string name="enter_password_require">You need to enter your password</string>
    <string name="confirm_password_require">You need to confirm password</string>
    <string name="number_not_correct_format">Your phone number is not correct format</string>
    <string name="check_password_length">Password length must be more than 6 characters</string>
    <string name="confirm_password_not_correct">Confirm password is not correct</string>
    <string name="authen_fail">Authentication failed.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="chair">Chair</string>
    <string name="table">Table</string>
    <string name="arm_chair">ArmChair</string>
    <string name="bed">Bed</string>
    <string name="request_login">Bạn cần đăng nhập \n để sử dụng tính năng này</string>
    <string name="cancel">Cancel</string>
    <string name="use_as_the_shipping_address">Use as the shipping address</string>
    <string name="no_order">You don\'t have any orders yet</string>
    <string name="no_review">You don\'t have any reviews yet</string>
    <string name="added_to_your_favorites">Added to your favorites</string>
    <string name="added_to_your_cart">Added to your cart</string>
    <string name="detail">Details</string>
    <string name="select_a_delivery_method">SELECT A DELIVERY METHOD</string>
    <string name="payment_methods">Payment Methods</string>
</resources>