<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderSuccessFragment">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/success"
        android:textAllCaps="true"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_256dp"
        android:layout_height="@dimen/_256dp"
        android:layout_marginTop="@dimen/_32dp"
        android:src="@drawable/solar_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginTop="-24dp"
        android:src="@drawable/check"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/your_order_will_be_delivered_soon_n_thank_you_for_choosing_our_app"
        android:textColor="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/trackOrderBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/bg_login_btn"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_10dp"
        android:text="@string/track_your_orders"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@id/backHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/backHomeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/bg_login_btn"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_10dp"
        android:text="@string/back_to_home"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>