<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/_16dp"
        android:src="@mipmap/ic_main_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@color/grey97"
        app:layout_constraintBottom_toBottomOf="@id/logoImage"
        app:layout_constraintEnd_toStartOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoImage" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@color/grey97"
        app:layout_constraintBottom_toBottomOf="@id/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logoImage"
        app:layout_constraintTop_toTopOf="@id/logoImage" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="@dimen/_26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginBottom="@dimen/_32dp"
        app:layout_constraintBottom_toTopOf="@id/line3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@drawable/bg_login_btn"
                android:padding="@dimen/_14dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:padding="@dimen/_8dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/signInWithGoogle"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:src="@drawable/google" />

                <ImageView
                    android:id="@+id/signInWithFacebook"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:src="@drawable/facebook" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/line3"
        android:layout_width="@dimen/_128dp"
        android:layout_height="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:background="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>