<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyCartFragment">


    <View
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/my_cart"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleFragment"
        tools:listitem="@layout/item_cart" />


    <LinearLayout
        android:id="@+id/enterPromoBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/bg_next"
        android:gravity="center"
        android:padding="@dimen/_6dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/totalPriceText"
        app:layout_constraintTop_toTopOf="@+id/editText">

        <View
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@drawable/ic_next" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/bg_promo_code"
        android:hint="@string/enter_your_promo_code"
        android:padding="@dimen/_10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv1"
        app:layout_constraintEnd_toStartOf="@+id/enterPromoBtn"
        app:layout_constraintStart_toStartOf="@+id/tv1" />


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/total"
        android:textColor="@color/grey69"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkOutBtn"
        app:layout_constraintStart_toStartOf="@+id/checkOutBtn" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkOutBtn"
        app:layout_constraintEnd_toEndOf="@id/checkOutBtn"
        tools:text="$ 100.00" />

    <TextView
        android:id="@+id/checkOutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sp"
        android:layout_marginEnd="@dimen/_16sp"
        android:layout_marginBottom="@dimen/_16sp"
        android:background="@drawable/bg_login_btn"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_14dp"
        android:text="@string/check_out"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>